# My-editor

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: rust.yml
.my-editor/: settings.json
src/: lib.rs  main.rs
src/assets/: asset.rs
src/editor/: editor_element.rs  editor_window.rs  mod.rs  syntax_highlighter.rs  text_buffer.rs  text_layout.rs
src/editor/key/: input.rs  key.rs  mod.rs  shortcuts.rs
src/editor/log/: log.rs
src/editor/menu_bar/: bar_element.rs  menu_bar.rs  mod.rs
src/editor/tab_bar/: bar_element.rs  mod.rs
src/editor/tool_bar/: mod.rs  search_file.rs  text_input.rs  tree_file.rs
src/run/: mod.rs  run.rs
src/settings/: settings.rs
src/window/: mod.rs  window_render.rs
tests/: lib.rs
tests/assets/: asset_tests.rs  mod.rs
tests/editor/: editor_element_tests.rs  editor_window_tests.rs  mod.rs  syntax_highlighter_tests.rs  text_buffer_tests.rs
tests/editor/key/: input_tests.rs  key_tests.rs  mod.rs  shortcuts_tests.rs
tests/editor/log/: log_tests.rs  mod.rs
tests/editor/menu_bar/: bar_element_tests.rs  menu_bar_tests.rs  mod.rs
tests/editor/tab_bar/: bar_element_tests.rs  mod.rs
tests/editor/tool_bar/: bar_element_tests.rs  mod.rs  search_file_tests.rs  text_input_tests.rs  tree_file_tests.rs
tests/settings/: mod.rs  settings_tests.rs
tests/window/: mod.rs  window_render.rs
