[package]
name = "my-editor"
version = "0.1.0"
edition = "2024"

[dependencies]

gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = "0.5.1"
rfd = "0.15"
cosmic-text = "0.12"
syntect = "5.2"
anyhow = "1.0.102"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json_comments = "0.2"
